# fadvisor

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml  pytest.ini
app/: Dockerfile  LICENSE  README.md  __init__.py  agent.py  api_server.py  config.py  docker-compose.yml  main.py  pyproject.toml  requirements.txt  setup.py
app/agents/: __init__.py  financial_advisor.py  main_agent.py  market_analyst.py  portfolio_manager.py
app/tests/: __init__.py  test_agents.py  test_tools.py
app/tools/: __init__.py  agent_tools.py  financial_tools.py  news_tools.py
app/utils/: __init__.py  llm_wrapper.py
